Renamed generated-rest to restness.

--- a/pom.xml
+++ b/pom.xml
@@ -22,4 +22,11 @@
 	<modules>
 		<module>core</module>
 	</modules>
+	<distributionManagement>
+		<repository>
+			<id>dev</id>
+			<name>Local repository</name>
+			<url>file://${user.home}/.m2/repository</url>
+		</repository>
+	</distributionManagement>
 </project>
