Seperated data classes into module in order to reuse them without the code generation part of the library.

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 	</properties>
 	<modules>
 		<module>core</module>
+		<module>data</module>
 	</modules>
 	<distributionManagement>
 		<repository>
