--- a/core/pom.xml
+++ b/core/pom.xml
@@ -8,11 +8,12 @@
 		<groupId>eu.nerdfactor</groupId>
 		<version>0.0.20</version>
 	</parent>
+	<groupId>eu.nerdfactor.restness</groupId>
 	<artifactId>restness-core</artifactId>
 	<version>0.0.20</version>
 	<dependencies>
 		<dependency>
-			<groupId>eu.nerdfactor</groupId>
+			<groupId>eu.nerdfactor.restness</groupId>
 			<artifactId>restness-data</artifactId>
 			<version>0.0.20</version>
 		</dependency>
@@ -112,8 +113,8 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.11.0</version>
 				<configuration>
-					<source>21</source>
-					<target>21</target>
+					<source>17</source>
+					<target>17</target>
 					<generatedSourcesDirectory>${project.build.directory}/generated-sources/</generatedSourcesDirectory>
 				</configuration>
 			</plugin>
