--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
 	<modules>
 		<module>core</module>
 		<module>data</module>
+		<module>example</module>
 	</modules>
 	<distributionManagement>
 		<repository>
