--- a/data/pom.xml
+++ b/data/pom.xml
@@ -4,11 +4,10 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<artifactId>restness</artifactId>
-		<groupId>eu.nerdfactor</groupId>
+		<artifactId>restness-parent</artifactId>
+		<groupId>eu.nerdfactor.restness</groupId>
 		<version>0.0.20</version>
 	</parent>
-	<groupId>eu.nerdfactor.restness</groupId>
 	<artifactId>restness-data</artifactId>
 	<version>0.0.20</version>
 	<dependencies>
