--- a/processing/pom.xml
+++ b/processing/pom.xml
@@ -8,16 +8,14 @@
 		<groupId>eu.nerdfactor.restness</groupId>
 		<version>0.0.20</version>
 	</parent>
-	<artifactId>restness-core</artifactId>
+	<artifactId>restness-processing</artifactId>
 	<version>0.0.20</version>
 	<dependencies>
 		<dependency>
 			<groupId>eu.nerdfactor.restness</groupId>
-			<artifactId>restness-data</artifactId>
+			<artifactId>restness-core</artifactId>
 			<version>0.0.20</version>
 		</dependency>
-
-
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-web</artifactId>
@@ -31,62 +29,9 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-jpa</artifactId>
-			<version>3.3.3</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>jakarta.validation</groupId>
-			<artifactId>jakarta.validation-api</artifactId>
-			<version>3.1.0</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.security</groupId>
-			<artifactId>spring-security-config</artifactId>
-			<version>6.2.4</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-autoconfigure</artifactId>
-			<version>3.3.2</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.networknt</groupId>
-			<artifactId>json-schema-validator</artifactId>
-			<version>1.5.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.jetbrains</groupId>
-			<artifactId>annotations</artifactId>
-			<version>24.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.junit.jupiter</groupId>
-			<artifactId>junit-jupiter</artifactId>
-			<version>5.10.3</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-core</artifactId>
-			<version>5.3.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.mockito</groupId>
-			<artifactId>mockito-junit-jupiter</artifactId>
-			<version>5.3.1</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.34</version>
-			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>com.squareup</groupId>
@@ -108,7 +53,9 @@
 				<configuration>
 					<source>17</source>
 					<target>17</target>
-					<generatedSourcesDirectory>${project.build.directory}/generated-sources/</generatedSourcesDirectory>
+					<generatedSourcesDirectory>
+						${project.build.directory}/generated-sources/
+					</generatedSourcesDirectory>
 				</configuration>
 			</plugin>
 		</plugins>
